<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    android:theme="@style/ActionBarTheme"
    android:background="@color/white"
    >

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_gravity="center"
        android:text="@string/question"
        android:lineSpacingExtra="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="50dp"
        android:textColor="@color/black"
        />

    <LinearLayout
        android:id="@+id/answers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:paddingBottom="80dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/btn_answer_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_1"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:padding="14dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:background="@drawable/button_action"
            />

        <TextView
            android:id="@+id/btn_answer_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_2"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:padding="14dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:background="@drawable/button_action"
            />

        <TextView
            android:id="@+id/btn_answer_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_3"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:padding="14dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:background="@drawable/button_action"
            />

        <TextView
            android:id="@+id/btn_answer_d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_4"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:padding="14dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:background="@drawable/button_action"
            />
    </LinearLayout>

</LinearLayout>
