<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:theme="@style/NoActionBarTheme"
    tools:context=".MainMenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        android:theme="@style/NoActionBarTheme">

        <TextView
            android:id="@+id/tv_mm_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            android:text="@string/welcome_user"
            android:textSize="24sp"/>

        <!-- Quiz Card Button -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_goto_quiz"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="4dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/cliofront"
                    android:contentDescription="@string/img_cliors_desc"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:layout_marginTop="100dp"
                    android:layout_marginBottom="100dp"
                    android:text="@string/quiz_menu_card"/>
        </androidx.cardview.widget.CardView>

        <!-- User Score Card Button -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_goto_userscore"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="4dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/porschelogo"
                android:contentDescription="@string/img_porsche_desc"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="100dp"
                android:text="@string/score_menu_card"/>
        </androidx.cardview.widget.CardView>

        <!-- Insert Question Card Button -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_insert_question"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="4dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/integradc2"
                android:contentDescription="@string/img_cliors_desc"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="100dp"
                android:text="@string/insert_question_menu_card"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>