<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:theme="@style/NoActionBarTheme"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/manta"
        android:contentDescription="@string/img_manta_desc"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:theme="@style/NoActionBarTheme"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:gravity="center"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:textColor="#4F3267"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="#e5e5e5ee"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/login"
                    android:textSize="30sp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:padding="10dp"
                    android:background="@drawable/inputfield_rounded"
                >
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_username_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:textStyle="italic"
                        android:background="@drawable/inputfield_rounded"
                    />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/inputfield_rounded"
                    >

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_password_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:background="@drawable/inputfield_rounded"
                        android:hint="@string/password"
                        android:textStyle="italic"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="@drawable/button_action"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/white"
                    android:text="@string/login"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_switch_to_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switch_to_register"
            android:textSize="20sp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:textColor="@color/white"
            android:focusable="true" />
    </LinearLayout>
</FrameLayout>
