<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    android:theme="@style/NoActionBarTheme"
    tools:context=".InsertQuestionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:theme="@style/NoActionBarTheme"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/insert_question"
            android:layout_marginTop="20dp"
            android:textSize="30sp"
            android:textStyle="bold"
            />

        <!-- Question Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:textColorHint="@color/white"
            android:background="@drawable/inputfield_rounded_color"
            >
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_question"
                android:textColorHint="@color/white"
                android:shadowColor="@color/white"
                android:textColorLink="@color/white"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textStyle="italic"
                android:background="@drawable/inputfield_rounded_color"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Answer Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:textColorHint="@color/white"
            android:background="@drawable/inputfield_rounded_color"
            >
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_question_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_Answer"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textStyle="italic"
                android:background="@drawable/inputfield_rounded_color"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Wrong Answer 1 Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:textColorHint="@color/white"
            android:background="@drawable/inputfield_rounded_color"
            >
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_question_wronganswer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/wrong_answer_1"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textStyle="italic"
                android:background="@drawable/inputfield_rounded_color"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Wrong Answer 2 Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:textColorHint="@color/white"
            android:background="@drawable/inputfield_rounded_color"
            >
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_question_wronganswer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/wrong_answer_2"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textStyle="italic"
                android:background="@drawable/inputfield_rounded_color"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Wrong Answer 3 Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:textColorHint="@color/white"
            android:background="@drawable/inputfield_rounded_color"
            >
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_question_wronganswer3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/wrong_answer_3"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textStyle="italic"
                android:background="@drawable/inputfield_rounded_color"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Severtiy Input -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:textColorHint="@color/white"
            android:background="@drawable/inputfield_rounded_color"
            >
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_question_severtiy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/severtiy_hint"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textStyle="italic"
                android:background="@drawable/inputfield_rounded_color"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_insert_question"
            android:layout_width="180dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:width="120dp"
            android:layout_gravity="end"
            android:textColor="@color/white"
            android:text="@string/send_question"
            android:background="@drawable/button_action"/>
    </LinearLayout>
</ScrollView>