<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:theme="@style/NoActionBarTheme"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/manta"
        android:contentDescription="@string/img_manta_desc"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:theme="@style/NoActionBarTheme"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:gravity="center"
            android:textSize="50sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="#e5e5e5ee"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/register"
                    android:textSize="30sp"/>

                <!-- Username Input -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:background="@drawable/inputfield_rounded"
                    >
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/username"
                        android:textStyle="italic"
                        android:background="@drawable/inputfield_rounded"
                    />
                </com.google.android.material.textfield.TextInputLayout>


                <!-- Action Button -->
                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:background="@drawable/button_action"
                    android:textSize="18sp"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/white"
                    android:text="@string/register"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</FrameLayout>